--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 astroid==2.2.5
 autopep8==1.4.4
 blis==0.2.4
-Bottleneck==1.2.1
 clipboard==0.0.4
 cymem==2.0.2
-fastai==1.0.57
 fastprogress==0.1.21
 gTTS==2.0.4
 gTTS-token==1.1.3
@@ -30,14 +28,11 @@ pyperclip==1.7.0
 PyRect==0.1.4
 PyScreeze==0.1.22
 python3-xlib==0.15
-PyTweening==1.0.3
-selenium==3.141.0
 spacy==2.1.8
 srsly==0.1.0
 thinc==7.0.8
-torch==1.2.0
-torchvision==0.4.0
 tqdm==4.36.1
 typed-ast==1.4.0
 wasabi==0.2.2
 wrapt==1.11.1
+flask
